libs/imageproperties/imagepropertiessidebardb.h
@@ -95,7 +95,6 @@ public slots:
 
 private slots:
 
-    void slotSetFocus();
     void slotChangedTab(QWidget* tab);
     void slotThemeChanged();
     void slotFileMetadataChanged(const KURL &url);
